<resources>
    <string name="app_name">Booking Hotels</string>
    <string name="user_name">Numele:</string>
    <string name="user_prename">Prenumele:</string>
    <string name="password">Parola:</string>
    <string name="email">Email:</string>
    <string name="login_button">Logheaza-te</string>
    <string name="register_button">Inregistreaza-te</string>
    <string name="no_User">Nu aveti cont? Creati unul</string>
    <string name="error_email">Introduceti o adresa de email valida</string>
    <string name="error_name">Introduceti numele</string>
    <string name="error_prename">Introduceti prenumele</string>
    <string name="error_password">Introduceti parola</string>
    <string name="error_name_password">Nu exista asa cont. Va rugam sa va inregistra-ti.</string>
    <string name="conf_password">Confirmati parola:</string>
    <string name="error_password_match">Nu coincide cu parola de confirmare</string>
    <string name="search_house">Cautare locuinte</string>
    <string name="type">Tipul locuintei:</string>
    <string name="rating">Apreciere:</string>
    <string name="from_Price">De la suma:</string>
    <string name="to_Price">Pina la suma:</string>
    <string name="success_message">Inregistrarea s-a salvat cu succes</string>
    <string name="error_email_exists">Deja exista cont cu asa adresa de email</string>
    <string name="title">Denumire:</string>
    <string name="address">Adresa:</string>
    <string name="price">Pretul:</string>
    <string name="post_View">Ofera</string>
    <string name="nr_Persons">Nr. de persoane</string>
    <string name="night_Days">Numarul de nopti</string>
    <string name="reservationText">Rezervare</string>
    <string name="image">Imagine</string>
    <string name="loadImage">Incarcati imaginea</string>
    <string name="dateIn">De la data:</string>
    <string name="dateOut">pina la:</string>
    <string name="room">Nr. de camere:</string>
    <string name="action_settings">Settings</string>
    <string name="phone">Nr. telefon:</string>
    <string name="zip">Cod postal:</string>
    <string name="myPosts">Ofertele mele</string>
    <string name="myReservations">Rezervarile mele</string>
    <string name="home">Acasa</string>
    <string name="navigation_drawer_open">Open </string>
    <string name="navigation_drawer_close">Close </string>
    <string name="separator"> - </string>
    <string name="period"> Perioada </string>
    <string name="roomType"> Tipul </string>
    <string name="roomNumber"> Nr. camerei </string>
    <string name="logout_button">Iesire</string>
</resources>
