<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bookinghotels.app.mainActivity.UserActions.LoginActivity">
<android.support.v7.widget.Toolbar
    android:id="@+id/login_app_toolbar"
    android:layout_width="match_parent"

    android:layout_height="?attr/actionBarSize"
    android:layout_alignParentTop="true"
    android:background="?attr/colorAccent"
    app:popupTheme="@style/AppTheme.PopupOverlay" />
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/scroll"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".User.LoginActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:layout_marginTop="40dp"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/user_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:hint="@string/user_name"
        android:inputType="text"
        android:textColor="@android:color/holo_blue_light"
        android:maxLines="1"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:passwordToggleEnabled="true"
        android:text="@string/password" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/password_Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:maxLines="1"
        android:textColor="@android:color/holo_blue_light"
        android:inputType="textPassword"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:paddingRight="10dp"

        android:paddingLeft="10dp"
        android:textSize="16sp"
        android:textColor="@color/searchBar"
        android:background="@color/colorAccent"
        android:text="@string/login_button" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/register_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/no_User"
        android:textSize="16sp"
        />
    <TextView android:id="@+id/registerView"
        android:text="@string/register_button"
        android:contextClickable="true"
        android:textSize="16dp"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

</LinearLayout>
</android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>