<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:cardCornerRadius="5dp"
    card_view:cardUseCompatPadding="true">

    <TextView
        android:id="@+id/hotelTitleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/relativeReservLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <LinearLayout
            android:id="@+id/hotelAddressLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hotelAddressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <TextView
                android:id="@+id/hotelAddressView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/hotelAddressLabel"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dateLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hotelAddressLinearLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/datePeriodLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/period" />


                <TextView
                    android:id="@+id/dateInView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/datePeriodLabel"

                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/separatorView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignRight="@id/dateInView"
                    android:text="@string/separator" />

                <TextView
                    android:id="@+id/dateOutView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignRight="@id/separatorView"
                    android:textColor="#000000" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/roomLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dateLinearLayout"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/roomNumberLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/roomNumber" />

                <TextView
                    android:id="@+id/roomNumberView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/roomNumberLabel"
                    android:layout_gravity="center"
                    android:textColor="#000000" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/roomTypeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/roomType" />

                <TextView
                    android:id="@+id/roomTypeView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/roomTypeLabel"
                    android:layout_gravity="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="15dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/persRoomLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/roomLinearLayout"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nrPersLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nr_Persons" />

                <TextView
                    android:id="@+id/roomPriceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nrPersLabel"
                    android:text="@string/price" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nrPersView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/roomPriceView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nrPersView"
                    android:textColor="@color/colorAccent"
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</android.support.v7.widget.CardView>