<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/postView"
            android:layout_width="match_parent"
            android:text="@string/post_View"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="35dp"/>
    </LinearLayout>

<LinearLayout android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal">
        <TextView
            android:id="@+id/titleLabelPost"
            android:fontFamily="sans-serif"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="14dp"
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/titleInputPost"
            android:layout_marginTop="14dp"
            android:layout_marginRight="14dp"
            android:fontFamily="sans-serif"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width= "match_parent"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/typeLabelPost"
            android:fontFamily="sans-serif"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="14dp"
            android:text="@string/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/typeInputPost"
            android:layout_marginTop="14dp"
            android:layout_marginRight="14dp"
            android:fontFamily="sans-serif"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_width= "match_parent"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/addressLabelPost"
            android:fontFamily="sans-serif"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="14dp"
            android:text="@string/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/addressInputPost"
            android:layout_marginTop="14dp"
            android:layout_marginRight="14dp"
            android:fontFamily="sans-serif"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_width= "match_parent"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/priceLabelPost"
            android:fontFamily="sans-serif"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="14dp"
            android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/priceInputPost"
            android:layout_marginTop="14dp"
            android:layout_marginRight="14dp"
            android:fontFamily="sans-serif"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_width= "match_parent"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/checkInLabelPost"
            android:fontFamily="sans-serif"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="14dp"
            android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/checkInInputPost"
            android:layout_marginTop="14dp"
            android:layout_marginRight="14dp"
            android:fontFamily="sans-serif"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_width= "match_parent"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/checkOutLabelPost"
            android:fontFamily="sans-serif"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="14dp"
            android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/checkOutInputPost"
            android:layout_marginTop="14dp"
            android:layout_marginRight="14dp"
            android:fontFamily="sans-serif"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_width= "match_parent"/>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/imageLabelPost"
            android:fontFamily="sans-serif"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="14dp"
            android:text="@string/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    </LinearLayout>
